# Android-CameraPreview

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/timeapp/shawn/camera/preview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/songstudio/: CMakeLists.txt  ChangbaRecordingPreviewScheduler.cpp  com_timeapp_shawn_camera_preview_ChangbaRecordingPreviewScheduler.h
app/src/main/cpp/songstudio/camera_preview/: CMakeLists.txt  mv_recording_preview_controller.cpp
app/src/main/cpp/songstudio/libcommon/: CMakeLists.txt
app/src/main/cpp/songstudio/libcommon/opengl_media/render/: video_gl_surface_render.cpp
app/src/main/java/com/timeapp/shawn/camera/: CameraPreviewActivity.java  MainActivity.java
app/src/main/java/com/timeapp/shawn/camera/preview/: CameraConfigInfo.java  CameraParamSettingException.java  ChangbaRecordingPreviewScheduler.java  ChangbaRecordingPreviewView.java  ChangbaVideoCamera.java
app/src/main/java/com/timeapp/shawn/camera/utils/: LogUtils.java  SDCardUtils.java
app/src/main/res/layout/: activity_camera_preview.xml  activity_main.xml
app/src/test/java/com/timeapp/shawn/camera/preview/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
